Bug 582428 - Change data type library to be case insensitive
Change-Id: Ib5c599737f793912e1d7e015b82c3fd2ef51fcbb
Signed-off-by: Martin Jobst <martin.jobst@posteo.de>